--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
 </head>
 
 <style>
+    html, body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+    }
     canvas{
         image-rendering: -moz-crisp-edges;
         image-rendering: -webkit-crisp-edges;
         image-rendering: pixelated;
         image-rendering: crisp-edges;
+	height: 100%;
     }
 </style>
 
 
 <body>
-    <canvas id="myCan" style="width:50%"></canvas>
+    <canvas id="myCan"></canvas>
 </body>
 
 <script src="init.js" type="text/javascript"></script>
