--- a/index.html
+++ b/index.html
@@ -1,36 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
-<html>
 <head>
-    <meta charset="UTF-8">
-    <title>WebGL</title>
+	<meta charset="UTF-8">
+	<link href="css/style.css" rel="stylesheet">
+	<title>WebGL</title>
 </head>
 
-<style>
-    html, body {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-    }
-    canvas{
-        image-rendering: -moz-crisp-edges;
-        image-rendering: -webkit-crisp-edges;
-        image-rendering: pixelated;
-        image-rendering: crisp-edges;
-	height: 100%;
-    }
-</style>
-
-
 <body>
-    <canvas id="myCan"></canvas>
+	<canvas id="myCan"></canvas>
 </body>
 
-<script src="init.js" type="text/javascript"></script>
-<script src="shader.js" type="text/javascript"></script>
-<script src="texture.js" type="text/javascript"></script>
-<script src="batch.js" type="text/javascript"></script>
-<script src="game.js" type="text/javascript""></script>
+<script src="js/init.js" type="text/javascript"></script>
+<script src="js/shader.js" type="text/javascript"></script>
+<script src="js/texture.js" type="text/javascript"></script>
+<script src="js/batch.js" type="text/javascript"></script>
+<script src="js/game.js" type="text/javascript""></script>
 
 </html>
